--- a/content/posts/THM/2020-08-28-THM-Jupyter-101.md
+++ b/content/posts/THM/2020-08-28-THM-Jupyter-101.md
@@ -1,17 +1,21 @@
 ---
-layout: post
 title: Write-Up [THM] Jupyter 101
-categories: [Write-Ups, TryHackMe]
-tags: [TryHackMe, Python]
-featured-image:  thm/jupyter-101/theme.png
-featured-image-alt: Jupyter 101
+template: "post"
+date: "2020-08-28"
+draft: false
+category: "Write-Ups, TryHackMe"
+tags:
+  - "TryHackMe"
+  - "Python"
+social-image: "/media/thm/jupyter-101/theme.png"
+description: "It's a write-up about the room : [Try Hack Me - Room : Jupyter 100](https://tryhackme.com/room/jupyter101)"
 ---
 
 It's a write-up about the room : [Try Hack Me - Room : Jupyter 100](https://tryhackme.com/room/jupyter101)
 
 # [Task 1] Preface
 
-![Task 1](/assets/img/thm/jupyter-101/task-1.png)
+![Task 1](/media/thm/jupyter-101/task-1.png)
 
 # [Task 2] What is Jupyter ?
 
@@ -20,25 +24,25 @@ It's a write-up about the room : [Try Hack Me - Room : Jupyter 100](https://tryh
 # [Task 3] Deploying Instance & Logging In
 
 After deploying the instance, we have :
-![Deploy](/assets/img/thm/jupyter-101/deploy.png)
+![Deploy](/media/thm/jupyter-101/deploy.png)
 
 We have to go on the website of the IP adress and connect with the password `tryhackme`.
 
-![Password](/assets/img/thm/jupyter-101/password.png)
+![Password](/media/thm/jupyter-101/password.png)
 
-Once connect : ![Menu](/assets/img/thm/jupyter-101/menu.png)
+Once connect : ![Menu](/media/thm/jupyter-101/menu.png)
 
 # [Task 4] Let's Learn More About Jupyter 
 
 > Enter the "WhatIsJupyter" directory and launch "WhatIsJupyter.ipynb" and have a read through.
 
-![Task-4](/assets/img/thm/jupyter-101/task-4.png)
+![Task-4](/media/thm/jupyter-101/task-4.png)
 
 # [Task 5] Understanding how Jupyter Notebooks Run
 
 > Navigate into the "UnderstandingJupyterNotebooks" directory and launch "UnderstandingHowJupyterExecutes.ipynb" and read the annotations I have made to understand how to answer this.
 
-![Task-5](/assets/img/thm/jupyter-101/task-5.png)
+![Task-5](/media/thm/jupyter-101/task-5.png)
 
 After reading the document `UnderstandHowJupyterExecutes.ipynb`, we can answer the differents question.  
 
@@ -59,27 +63,27 @@ Port: 22
 
 With Linux, we can login into the Instance with `ssh username@ip_machine`.
 
-![SSH](/assets/img/thm/jupyter-101/ssh.png)
+![SSH](/media/thm/jupyter-101/ssh.png)
 
 > Now, after successful login, lets see what's going on, using ls. Then, we create a new file using touch in this case, "LookAtMe.Txt". 
 
-![ls](/assets/img/thm/jupyter-101/ls.png)
+![ls](/media/thm/jupyter-101/ls.png)
 
 > Then, we create a new file using touch in this case, "LookAtMe.Txt". 
 
-![nano](/assets/img/thm/jupyter-101/nano.png)
+![nano](/media/thm/jupyter-101/nano.png)
 
 > Go back to the Jupyter instance in your web browser, we can now see the file we have just created is visible within Jupyter!
 
-![Menu-Task-5](/assets/img/thm/jupyter-101/menu-task-5.png)
+![Menu-Task-5](/media/thm/jupyter-101/menu-task-5.png)
 
-![LookAtMe.txt](/assets/img/thm/jupyter-101/LookAtMe.png)
+![LookAtMe.txt](/media/thm/jupyter-101/LookAtMe.png)
 
 # [Task 7] Handling Data With Pandas
 
 > Navigate to the "IntroToPandas" directory on the Jupyter instance and run "IntroToPandas.ipynb" please read the annotations.
 
-![Task 7](/assets/img/thm/jupyter-101/task-7.png)
+![Task 7](/media/thm/jupyter-101/task-7.png)
 
 After reading the document `IntroToPandas.ipynb`, we can answer the different questions.  
 
@@ -93,7 +97,7 @@ The functon that gives the amount of columns and rows of the dataset is **shape*
 
 > Navigate to the "IntroToMatplotlib" directory on the Jupyter Instance and run "IntroToMatplotlib.ipynb" please read the annotations.
 
-![Task 8](/assets/img/thm/jupyter-101/task-8.png)
+![Task 8](/media/thm/jupyter-101/task-8.png)
 
 After reading the document `IntroToMatplotlib.ipynb`, we can answer the differents question. 
 
