--- a/content/posts/THM/2020-08-29-THM-tmux.md
+++ b/content/posts/THM/2020-08-29-THM-tmux.md
@@ -1,10 +1,16 @@
 ---
-layout: post
 title: Write-Up [THM] tmux
-categories: [Write-Ups, TryHackMe]
-tags: [TryHackMe, Linux, Bash, Red Primer Series]
-featured-image:  thm/tmux/theme.png
-featured-image-alt: tmux
+template: "post"
+date: "2020-08-28"
+draft: false
+category: "Write-Ups, TryHackMe"
+tags:
+  - "TryHackMe"
+  - "Linux"
+  - "Bash"
+  - "Red Primer Series"
+social-image: "/media/thm/tmux/theme.png"
+description: "It's a write-up about the room : [Try Hack Me - Room : tmux](https://tryhackme.com/room/rptmux)"
 ---
 
 It's a write-up about the room : [Try Hack Me - Room : tmux](https://tryhackme.com/room/rptmux)
