--- a/content/posts/THM/2020-08-31-THM-Blue.md
+++ b/content/posts/THM/2020-08-31-THM-Blue.md
@@ -1,17 +1,22 @@
 ---
-layout: post
 title: Write-Up [THM] Blue
-categories: [Write-Ups, TryHackMe]
-tags: [TryHackMe, Windows, Eternal blue]
-featured-image:  thm/blue/theme.png
-featured-image-alt: Blue
+template: "post"
+date: "2020-08-28"
+draft: false
+category: "Write-Ups, TryHackMe"
+tags:
+  - "TryHackMe"
+  - "Windows"
+  - "Blue"
+social-image: "/media/thm/blue/theme.png"
+description: "It's a write-up about the room : [Try Hack Me - Room : Blue](https://tryhackme.com/room/blue)"
 ---
 
 It's a write-up about the room : [Try Hack Me - Room : Blue](https://tryhackme.com/room/blue)
 
 # [Task 1] - Recon
 
-![Task 1](/assets/img/thm/blue/task-1.png)
+![Task 1](/media/thm/blue/task-1.png)
 
 First, we deploy the instance.  
 We scan the machine with the command : `nmap -sV MACHINE_IP`. 
