--- a/content/posts/THM/2020-08-31-THM-Nmap.md
+++ b/content/posts/THM/2020-08-31-THM-Nmap.md
@@ -1,10 +1,17 @@
 ---
-layout: post
 title: Write-Up [THM] Nmap
-categories: [Write-Ups, TryHackMe]
-tags: [TryHackMe, Networking, nmap, Red Primer Series, Scanning]
-featured-image:  thm/nmap/theme.png
-featured-image-alt: Nmap
+template: "post"
+date: "2020-08-28"
+draft: false
+category: "Write-Ups, TryHackMe"
+tags:
+  - "TryHackMe"
+  - "Networking"
+  - "nmap"
+  - "Red Primer Series"
+  - "Scanning"
+social-image: "/media/thm/nmap/theme.png"
+description: "It's a write-up about the room : [Try Hack Me - Room : Nmap](https://tryhackme.com/room/rpnmap)"
 ---
 
 It's a write-up about the room : [Try Hack Me - Room : Nmap](https://tryhackme.com/room/rpnmap)
