--- a/content/posts/THM/2020-10-31-THM-LFI.md
+++ b/content/posts/THM/2020-10-31-THM-LFI.md
@@ -1,8 +1,13 @@
 ---
-layout: post
-title: Write-Up [THM] LFI
-categories: [Write-Ups, TryHackMe]
-tags: [TryHackMe, LFI]
+title: Write-Up [THM] LFI 
+template: "post"
+date: "2020-08-28"
+draft: false
+category: "Write-Ups, TryHackMe"
+tags:
+  - "TryHackMe"
+  - "LFI"
+description: "It's a write-up about the room : [Try Hack Me - Room : LFI]"
 ---
 
 It's a write-up about the room : [Try Hack Me - Room : LFI]
